--- a/FEEDBACK.html
+++ b/FEEDBACK.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarsFurni">
         <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link" href="HOME.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li><a class="nav-link" href="ABOUT US.html">About us</a></li>
           <li><a class="nav-link active" href="FEEDBACK.html">Feedback</a></li>
